# Neural-Network

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.sln  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  README.md  build.bat  example.cpp  main.cpp  neural_network.cpp  neural_network.h  utils.cpp  utils.h  vector_utils.cpp  vector_utils.h
NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  Source.cpp  Test.cpp
mnist/: CMakeLists.txt  mnist_reader.hpp
neural_network/: CMakeLists.txt
neural_network/include/: neural_network.h  vector_utils.h
neural_network/src/: neural_network.cpp  vector_utils.cpp
